--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+theme: minima
+title: MZaam
+author: Myriam  
+email: myriam@mzaam.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  MZaam offers digital conversion and digital marketing services. We specialize in Shopify migration. We offer e-commerce and consulting. Located in Montreal, Canada..
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
